Position progress toolbar modules correctly on mobile

--- a/src/modules/courses-filter/style.css
+++ b/src/modules/courses-filter/style.css
@@ -19,3 +19,9 @@
   background: 'white';
   border: '1px solid #e5e6e7';
 }
+
+@media (max-width: 978px) {
+  .filter-input, .dropdown-button {
+    margin-top: 10px;
+  }
+}
